fix wave gap

--- a/custom.css
+++ b/custom.css
@@ -429,7 +429,7 @@ footer {
     }
     #about,
     #footer {
-        padding-top: 320px;
+        padding-top: 310px;
     }
     #experience {
         margin-top: 280px;
